src/objects/Account_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_Review_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountMasterPlan?id=&apos;+ Account__r.Id, TEXT( Account_Review__r.Total_Score__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Review</label>
        <referenceTo>Account_Review__c</referenceTo>
        <relationshipLabel>Accounts Data</relationshipLabel>
        <relationshipName>Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Data</relationshipLabel>
        <relationshipName>Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Total_Value__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountMasterPlan?id=&apos;+ Account__r.Id, TEXT( Account_Review__r.Total_Score__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Total Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_Last_Update__c</fullName>
        <label>Competitors Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitors_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountOverallRelationshipWindow?id=&apos;+ Account__r.Id, TEXT(Competitors_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitors Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_Number__c</fullName>
        <label>Competitors Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCV_New_Potential_Business__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountGrowthStrategy?id=&apos;+ Account__r.Id, CurrencyIsoCode__c + &apos; &apos; + TEXT(PNB_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCV New Potential Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_With_RDM_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountOpportunityList?id=&apos;+ Account__r.Id, TEXT(Opportunities_With_RDM__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunities With RDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_With_RDM__c</fullName>
        <label>Opportunities With RDM</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_With_VD__c</fullName>
        <label>Opportunities_With_VD</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_With_Value_Drivers__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountIndustryTrendsWindowNew?id=&apos;+ Account__r.Id, TEXT( Opportunities_With_VD__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunities With Value Drivers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <formula>HYPERLINK(&apos;/00O4E000000JMrZ?pn0=eq&amp;pv0=&apos;+ Account__r.Id, &apos;Opportunities&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNB_Amount__c</fullName>
        <label>PNB Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCP Past Activity</label>
        <referenceTo>PastActivity__c</referenceTo>
        <relationshipLabel>Accounts Data</relationshipLabel>
        <relationshipName>Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Share_of_Wallet__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountHistoricalBusinessWindow?id=&apos;+ Account__r.Id, TEXT( Past_Activity__r.Share_of_Wallet__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCP Share of Wallet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_Last_Update__c</fullName>
        <label>Strategic Initiative Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountStrategicContextWindow?id=&apos;+ Account__r.Id, TEXT(Strategic_Initiative_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Initiative Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_Number__c</fullName>
        <label>Strategic Initiative Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Balance__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountHistoricalBusinessWindow?id=&apos;+ Account__r.Id, &apos;Trade Balance&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Balance</label>
        <type>Text</type>
    </fields>
    <label>Account Data</label>
    <nameField>
        <label>Nombre de Account Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>